Fixed More project button to be aligned
- Margin left & right on the button was causing misaligning in the button

- Fixed an issue where More Projects button was shifting the About section. This was due to border added when hovered. Fixed by inserting border in advanced and changing it's color

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -121,16 +121,17 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    margin: 50px 30px;
+    margin: 50px 0px;
 }
 
 .HPLHelper {
     width: 50%;
     display: flex;
+    border: 1px solid black;
 }
 
 .HPLHelper:hover {
-    border: 1px solid red;
+    border-color: red;
 }
 
 .moreProjectsButton {
@@ -143,9 +144,6 @@
     padding: 4%;
 }
 
-.moreProjectsButton :hover {
-    color: black;
-}
 
 /**********************************************************************************************
     Home About us Section
@@ -281,6 +279,8 @@
         padding-top: 10px;
         letter-spacing: 1px;
     }
+
+    
 
     /**********************************************************************************************
         Home About us Section
